chore: :children_crossing: Fixed link excessive contrast and made it only underlined on hover

--- a/caearagon/assets/css/src/_links.css
+++ b/caearagon/assets/css/src/_links.css
@@ -27,3 +27,12 @@ a:hover,
 a:active {
 	outline: 0;
 }
+
+.red-left a {
+	text-decoration: none;
+	color: #000d23;
+}
+
+.red-left a:hover {
+	text-decoration: underline !important;
+}
